<?xml version="1.0" encoding="utf-8"?><resources>

    <string name="app_name">Haqq</string>
    <string name="action_exit">Exit</string>
    <string name="dummy"></string>
    <string name="title_sura">Sura</string>
    <string name="title_record">Record</string>
    <string name="title_result">Result</string>
    <string name="title_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="logo">Logo</string>
    <string name="about_haqq">Project Haqq</string>
    <string name="title_activity_splash_haqq">Splash</string>
    <string name="action_settings">Settings</string>
    <string name="splash">Splash</string>
    <string name="title_activity_aya_list">AyaList</string>
    <string name="action_goto">Go To</string>
    <string name="title_activity_read_aya">ReadAya</string>
    <string name="title_activity_goto">GotoActivity</string>
    <string name="title_activity_goto_aya">GotoAyaActivity</string>
    <string name="title_activity_play_record">PlayRecord</string>
    <string name="date">Date : </string>
    <string name="sura">Sura : </string>
    <string name="aya">Aya : </string>
    <string name="base_eval">Base Evalution</string>
    <string name="full_eval">Full Evaluation</string>
    <string name="title_activity_result_detail">ResultDetail</string>
    <string name="prefixHaqq">Haqq</string>
    <string name="pref_prefix_haqq">File Identifier Code</string>

    <string-array name="pref_haqq_arabictext">
        <item>With pause marks and diacritics(waqf and haraka)</item>
        <item>Without pause marks only</item>
        <item>Without pause marks and diacritics</item>
    </string-array>
    <string-array name="pref_haqq_arabictextval">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>        <string-array name="pref_haqq_scoringprocess">        <item>Notification(Background)</item>        <item>Direct(Wait)</item>    </string-array>    <string-array name="pref_haqq_scoringprocessval">        <item>1</item>        <item>0</item>    </string-array>

    <string name="arabictextdisplay">Arabic Text Display</string>    <string name="scoringprocess">Scoring Process Display</string>
    <string name="result_id_text">Name :</string>    <string name="result_id_text2">Result ID :</string>    <string name="pitch">Pitch</string>    <string name="rhythm">Rhythm</string>    <string name="volume">Volume</string>    <string name="recog">Recognition</string>    <string name="hundred">100</string>    <string name="average">Average</string>    <string name="comment_text">Evaluation :</string>    <string name="saveimage">Save As Images</string>    <string name="action_saveImage">Save as Image</string>    <string name="dispNameHaqq">Display Name</string>    <string name="defaultDisplayNameHaqq">Haqq</string>    <string name="delete">Delete</string>    <string name="register_api">Register</string>    <string name="email_api"></string>    <string name="account_data">Account Data</string>

</resources>