<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"
        android:titleCondensed="@string/action_settings"
        android:icon="@drawable/ic_action_setting_haqq_light"/>
    <item
        android:id="@+id/action_goto"
        android:orderInCategory="101"
        android:title="@string/action_goto"
        android:titleCondensed="@string/action_goto" 
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_goto_haqq_light"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_exit"
        android:titleCondensed="@string/action_exit"/>

</menu>