<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:svgimageview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SplashHaqq" >

    <com.caverock.androidsvg.SVGImageView
        android:id="@+id/backgroundSplash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/splash"
        android:scaleType="fitCenter"
        svgimageview:svg="svg/Background.svg" />

    <TextView
        android:id="@+id/projectNameSplash"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/projectLogoSplash"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/about_haqq"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/darkGreenCMYK" />

    <com.caverock.androidsvg.SVGImageView
        android:id="@+id/projectLogoSplash"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignLeft="@+id/projectNameSplash"
        android:layout_alignParentTop="true"
        android:layout_marginTop="125dp"
        android:contentDescription="@string/logo"
        svgimageview:svg="svg/Haqq_reverse.svg" />

</RelativeLayout>